--- a/atom.html
+++ b/atom.html
@@ -1,9 +1,10 @@
+
 <?xml version="1.0"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
   <title>Feed Name</title>
   <link href="http://domain/"/>
   <link type="application/atom+xml" rel="self" href="http://domain/atom.xml"/>
-  <updated>2013/07/10 9:26:50</updated>
+  <updated></updated>
   <id>http://domain/</id>
   <author>
     <name>Author</name>
