--- a/rss.html
+++ b/rss.html
@@ -1,3 +1,4 @@
+
 <?xml version="1.0"?>
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
 <channel>
@@ -6,10 +7,10 @@
     <atom:link href="http://domain/rss.xml" rel="self" type="application/rss+xml" />
     <description></description>
     <language>en-au</language>
-    <pubDate>水, 10 7 2013 09:26:50 %z</pubDate>
-    <lastBuildDate>水, 10 7 2013 09:26:50 %z</lastBuildDate>
+    <pubDate></pubDate>
+    <lastBuildDate></lastBuildDate>
 
     
 
-  </channel> 
+  </channel>
 </rss>
