Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Ekicyou.github.com by ekicyou</title>
+    <title>えちょのざんがい by ekicyou</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Ekicyou.github.com</h1>
-        <h2>えちょのざんがい</h2>
+        <h1>えちょのざんがい</h1>
+        <h2>ほもいでぽろぽろ</h2>
         <a href="https://github.com/ekicyou" class="button"><small>Follow me on</small>GitHub</a>
       </div>
     </header>
