--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 					
 					<p>完成系が見えると放置してしまう悪い癖‥‥。
 ツイッターでSHIORI構文の話が出てたので、久々に引っ張り出す。</p>
-<div class="horizontal">
-<iframe id="pasta" src="/pasta/app/design.html" allowtransparency="true"></iframe>
+<div class="horizontal" style="height: 100%;">
+<iframe style="bottom: 0px;" id="pasta" src="/pasta/app/design.html" allowtransparency="true"></iframe>
 </div>
 <p>日本語縦書きは、か細い感じの少女にこそふさわしい。</p>
 
