--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<p>完成系が見えると放置してしまう悪い癖‥‥。
 ツイッターでSHIORI構文の話が出てたので、久々に引っ張り出す。</p>
 <div class="horizontal" style="position: relative; height: 100%;">
-<iframe style="height:640px; bottom: 0px;" id="pasta" src="/pasta/app/design.html" allowtransparency="true"></iframe>
+<iframe style="width:600px; height:100%; bottom: 0px;" id="pasta" src="/pasta/app/design.html" frameborder="0" allowtransparency="true"></iframe>
 </div>
 <p>日本語縦書きは、か細い感じの少女にこそふさわしい。</p>
 
