--- a/src/core/index.html
+++ b/src/core/index.html
@@ -102,9 +102,20 @@
             *display: inline;
             *zoom: 1;
         }
+
+
+        html {
+            overflow-y: hidden;
+        }
+
+        .fixedbottom{
+            position:fixed;
+            bottom: 0;
+        }
+
     </style>
 </head>
 <body style="background-color: transparent;">
-    <h1>hello</h1>
+    <h1 class="fixedbottom">hello</h1>
 </body>
 </html>
