--- a/about.html
+++ b/about.html
@@ -42,6 +42,11 @@
     </div>
     <h1>えちょの残骸</h1>
 <p>ふるーい開発物を、後世に残す場所。</p>
+<ul>
+<li><a href="/old/dot-sakura/download/nar/dot_sakura_020.nar">どっとさくら</a></li>
+<li><a href="/old/web-sakura/areka/i.html">webさくら</a></li>
+<li><a href="/pasta/index.html">パスタさん</a></li>
+</ul>
 <p>現在は縦書きによるブログ構築技術・研究そのものを目的としているため、
 内容的はともかく記事数を増やす方針です。</p>
 <p>このサイトは世界のエントロピーの上昇に貢献します。</p>
