--- a/about.html
+++ b/about.html
@@ -47,8 +47,7 @@
 <li><a href="/old/web-sakura/areka/i.html">webさくら</a></li>
 <li><a href="/pasta/index.html">パスタさん</a></li>
 </ul>
-<p>現在は縦書きによるブログ構築技術・研究そのものを目的としているため、
-内容的はともかく記事数を増やす方針です。</p>
+<p>現在は縦書きによるブログ構築技術・研究そのものを目的としているため、内容的はともかく記事数を増やす方針です。</p>
 <p>このサイトは世界のエントロピーの上昇に貢献します。</p>
   </div>
 </div>
