--- a/about.html
+++ b/about.html
@@ -46,8 +46,9 @@
 <li><a href="/old/dot-sakura/download/nar/dot_sakura_020.nar">どっとさくら</a></li>
 <li><a href="/old/web-sakura/areka/i.html">webさくら</a></li>
 <li><a href="/pasta/index.html">パスタさん</a></li>
+<li>→<a href="/pasta/test.html">testモード</a></li>
 </ul>
-<p>現在は縦書きによるブログ構築技術・研究そのものを目的としているため、内容的はともかく記事数を増やす方針です。</p>
+<p>現在は縦書きによるブログ構築技術・研究そのものを目的としています。</p>
 <p>このサイトは世界のエントロピーの上昇に貢献します。</p>
   </div>
 </div>
