--- a/about.html
+++ b/about.html
@@ -43,7 +43,9 @@
     <h1>えちょの残骸</h1>
 <p>ふるーい開発物を、後世に残す場所。</p>
 <ul>
-<li><a href="/old/dot-sakura/download/nar/dot_sakura_020.nar">どっとさくら</a></li>
+<li>どっとさくら</li>
+<li><a href="/old/dot-sakura/download/nar/dot_sakura_020.nar">どっとさくら20%</a></li>
+<li><a href="/old/dot-sakura/download/nar/dot_sakura.nar">オリジナル再現</a></li>
 <li><a href="/old/web-sakura/areka/i.html">webさくら</a></li>
 <li><a href="/pasta/index.html">パスタさん</a></li>
 <li>→<a href="/pasta/app/design.html">testモード</a></li>
