--- a/about.html
+++ b/about.html
@@ -44,11 +44,11 @@
 <p>ふるーい開発物を、後世に残す場所。</p>
 <ul>
 <li>どっとさくら</li>
-<li><a href="/old/dot-sakura/download/nar/dot_sakura_020.nar">どっとさくら20%</a></li>
-<li><a href="/old/dot-sakura/download/nar/dot_sakura.nar">オリジナル再現</a></li>
+<li>　→<a href="/old/dot-sakura/download/nar/dot_sakura_020.nar">どっとさくら20%</a></li>
+<li>　→<a href="/old/dot-sakura/download/nar/dot_sakura.nar">オリジナル再現</a></li>
 <li><a href="/old/web-sakura/areka/i.html">webさくら</a></li>
 <li><a href="/pasta/index.html">パスタさん</a></li>
-<li>→<a href="/pasta/app/design.html">testモード</a></li>
+<li>　→<a href="/pasta/app/design.html">testモード</a></li>
 </ul>
 <p>現在は縦書きによるブログ構築技術・研究そのものを目的としています。</p>
 <p>このサイトは世界のエントロピーの上昇に貢献します。</p>
